# 8V42_Kiegechev_Programming_3sem_lab4

./: CMakeLists.txt  allocator.h  main.cpp  my_forward_list.h
